--- a/styles/style.css
+++ b/styles/style.css
@@ -12,14 +12,21 @@ body {
   display: none;
 }
 
-#start-btn,
-#restart-btn {
-  background-color: brown;
+#start-btn {
+  background-color: green;
   color: blue;
   padding: 20px;
   font-size: 20px;
+  margin-top: 30px;
+  border-radius: 50%; 
+}
+#restart-btn {
+  background-color: brown;
+  color: white;
+  padding: 30px;
+  font-size: 20px;
   margin-top: 40px;
-  border-radius: 10px;
+  border-radius: 50px; 
 }
 
 .container {
